Add reference to screencast on YouTube

--- a/portage.bib
+++ b/portage.bib
@@ -2,6 +2,11 @@
 % Bibliography
 %
 
+@misc{python-k1om-youtube,
+title = {{Cross Compiling Python 2.7 for the Intel® Xeon Phi™ with Gentoo Prefix
+(YouTube Screencast)}},
+howpublished = {\url{https://www.youtube.com/watch?v=YmME7nfjxzo}} }
+
 @misc{libffi-k1om,
 title = {{Workaround for compiling libffi for K1OM architecture (Intel® Xeon Phi™)}},
 howpublished = {\url{https://gist.github.com/amadio/6066dabf2b7d98ee73aab28f0dc07bf1}} }
